# PlayOnC

./: .gitignore  Makefile  README  README.rst  charops.c  charops.h
BarMetal/avr_mcu/pushinteraction/: main.c  makefile  pushbtn.c  pushbtn.h
BarMetal/avr_mcu/usart/: ioserial.c  main.c
BarMetal/avr_mcu/usart/include/: ioserial.h
BarMetal/avr_mcu/xledriver/: main.c  makefile  xled.c
BarMetal/avr_mcu/xledriver/include/: xled.h  xled_regconf.h
charstr/: charops.c  charops.h  charstr.c  makefile
libstring/: main.c  makefile  string  string.c
libstring/head/: string.h
libstring/include/: string.h
linkedlist/: list.c  main.c
linkedlist/include/: list.h
unix/ForkExec/: README  fork_and_execute.c  main.c
unix/ForkExec/include/: fork_and_execute.h
unix/Pipe/: CMakeLists.txt  ipc.c  ipc.h  main.c  reader.c  writer.c
unix/Pipe/include/: ipc.h
unix/Semaphore/: CMakeLists.txt  main.c  smphr.c  smphr.h
unix/Thread/: mainthread.c  threadmanip.c
unix/Thread/include/: threadmanip.h
unix/forkexec/: fex.c  main.c  makefile
unix/thread/: mainthread.c  makefile  threadmanip.c
unix/thread/include/: threadmanip.h
